BR 26-32 Add logging for project (Safarov Renat)